--- a/app/views/RiskController/threat.html
+++ b/app/views/RiskController/threat.html
@@ -1,4 +1,4 @@
-#{extends 'RiskController/id.html'/}
+#{extends 'risk.html'/}
 #{set title:messages.get('project.name')/}
 
 <div class='container'>
