--- a/app/views/risk.html
+++ b/app/views/risk.html
@@ -12,7 +12,7 @@
 				<li#{if 'asset' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.asset()}'>&{'menu.asset'}</a></li>
 				<li#{if 'threat' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.threat()}'>&{'menu.threat'}</a></li>
 				<li#{if 'control' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.control()}'>&{'menu.control'}</a></li>
-				<li#{if 'impact' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.impact()}'>&{'menu.impact'}</a></li>
+				<li#{if 'risk' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.risk()}'>&{'menu.risk'}</a></li>
 				<li#{if 'treatment' == request.actionMethod} class='active'#{/if}><a href='@{RiskController.treatment()}'>&{'menu.treatment'}</a></li>
 			</ul>
 		</div>
