JavaScript files relocation, Bing Translate API integration

--- a/app/views/RiskController/asset.html
+++ b/app/views/RiskController/asset.html
@@ -1,5 +1,8 @@
 #{extends 'risk.html'/}
 #{set title:messages.get('project.name')/}
+#{set 'moreScripts'}
+	#{script 'bing-translate.js'/}
+#{/set}
 
 <div class='container'>
 	<div class='row'>
