--- a/app/views/template.html
+++ b/app/views/template.html
@@ -3,14 +3,18 @@
 <html>
     <head>
         <title>#{get 'title'/}</title>
+
         <link rel='stylesheet' type='text/css' media='screen' href='@{'/public/style/bootstrap.min.css'}'/>
         <link rel='stylesheet' type='text/css' media='screen' href='@{'/public/style/screen.css'}'/>
+
 	    <link rel='shortcut icon' type='image/png' href='@{'/public/image/visualpharm/umbrella.png'}'/>
+
 	    *{<script type='text/javascript' src='@{'/public/js/less/less-1.2.0.min.js'}'></script>}*
-	    <script type='text/javascript' src='@{'/public/js/jquery/jquery-1.7.1.min.js'}'></script>
-	    <script type='text/javascript' src='@{'/public/js/jquery/jquery.inputhints.min.js'}'></script>
-	    <script type='text/javascript' src='@{'/public/js/bootstrap/bootstrap-tabs.js'}'></script>
-	    <script type='text/javascript' src='@{'/public/js/bootstrap/bootstrap-modal.js'}'></script>
+	    #{script 'jquery/jquery-1.7.1.min.js'/}
+        #{script 'jquery/jquery.inputhints.min.js'/}
+        #{script 'bootstrap/bootstrap-tabs.js'/}
+        #{script 'bootstrap/bootstrap-modal.js'/}
+	    #{get 'moreScripts'/}
     </head>
     <body>
         #{doLayout/}
